--- a/src/app/features/rfq/create-rfq/create-rfq.component.html
+++ b/src/app/features/rfq/create-rfq/create-rfq.component.html
@@ -31,7 +31,7 @@
         </span>
       </div>
     </div>
-    <mat-horizontal-stepper (selectionChange)="selectionChange($event)" [linear]="true" #stepper>
+    <mat-horizontal-stepper (selectionChange)="selectionChange($event)" #stepper>
       <!-- <ng-template matStepperIcon="edit" let-index="index">
                 {{1}}
             </ng-template> -->
