--- a/src/app/shared/dialogs/add-edit-grn/add-edit-grn-component.html
+++ b/src/app/shared/dialogs/add-edit-grn/add-edit-grn-component.html
@@ -1,4 +1,4 @@
-<div class="header-add-edit-dialog">
+<div lass="header-add-edit-dialog">
   <h1 mat-dialog-title>ADD GRN</h1>
   <button type="button" class="close" (click)="closeDialog()" aria-label="Close">
     <span aria-hidden="true">×</span>
