--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,25 +1,26 @@
-    @import "./base/variables.scss";
-    @import "./base/grid.scss";
-    @import "~@angular/material/prebuilt-themes/deeppurple-amber.css";
-    @import "./base/reset.scss";
-    @import "./layout/header.scss";
-    @import "./base/spacing.scss";
-    @import "./pages/po.component.scss";
-    @import "./pages/dashboard.scss";
-    @import "./pages/bom-preview.scss";
-    @import "./pages/global-store.component.scss";
-    @import "./pages/initiate-po.component.scss";
-    @import "./pages/po-card.component.scss";
-    @import "./pages/users.scss";
-    @import "./pages/bom.scss";
-    @import "./pages/rfq-bids.component.scss";
-    @import "./pages/supplier.scss";
-    @import "./pages/address-dialog.scss";
-    @import "./pages/dialog-styles.scss";
-    @import "./pages/card-layout.scss";
-    @import "./pages/signin-signup.scss";
-    @import "./layout/loader.scss";
-    @import "./pages/indent.scss";
-   // @import '../../../node_modules/ngx-guided-tour/scss/guided-tour-base-theme.scss';
-    @import "./pages/select-project.scss";
-    @import "./pages/walkthrough.scss";
+@import "./base/variables.scss";
+@import "./base/grid.scss";
+@import "~@angular/material/prebuilt-themes/deeppurple-amber.css";
+@import "./base/reset.scss";
+@import "./layout/header.scss";
+@import "./base/spacing.scss";
+@import "./pages/po.component.scss";
+@import "./pages/dashboard.scss";
+@import "./pages/bom-preview.scss";
+@import "./pages/global-store.component.scss";
+@import "./pages/initiate-po.component.scss";
+@import "./pages/po-card.component.scss";
+@import "./pages/users.scss";
+@import "./pages/bom.scss";
+@import "./pages/rfq-bids.component.scss";
+@import "./pages/create-rfq.component.scss";
+@import "./pages/supplier.scss";
+@import "./pages/address-dialog.scss";
+@import "./pages/dialog-styles.scss";
+@import "./pages/card-layout.scss";
+@import "./pages/signin-signup.scss";
+@import "./layout/loader.scss";
+@import "./pages/indent.scss";
+// @import '../../../node_modules/ngx-guided-tour/scss/guided-tour-base-theme.scss';
+@import "./pages/select-project.scss";
+@import "./pages/walkthrough.scss";
