UI Fixes and in rfq-bid, tile etc Signed-off-by: subham.saha@buildsupply.com <subham.saha@buildsupply.com>

--- a/src/app/features/bom/bom-table/bom-table.component.html
+++ b/src/app/features/bom/bom-table/bom-table.component.html
@@ -17,18 +17,18 @@
           </button>
         </span>
         <span class="p-l-5">
-          <button mat-raised-button class="mr-3 main-background-color main-button color-white pull-right" [disabled]="!this.checkedSubcategory.length" (click)="raiseIndent()">
+          <button mat-raised-button class="mx-3 main-background-color main-button color-white pull-right" [disabled]="!this.checkedSubcategory.length" (click)="raiseIndent()">
             Raise Indent
           </button>
         </span>
-        <span *ngIf="projectData.openIndentCount > 0" class="p-l-5">
-          <button mat-raised-button class="mx-3 main-background-color main-button color-white pull-right " (click)="viewIndent()">
+        <!-- <span *ngIf="projectData.openIndentCount > 0" >
+          <button mat-raised-button class="m-l-15 main-background-color main-button color-white pull-right " (click)="viewIndent()">
             View Indent
           </button>
-        </span>
+        </span> -->
         <span>
           <button mat-raised-button class="main-background-color main-button color-white pull-right " (click)="addMaterial()">
-            Add/ Edit Material
+            Add/Edit Material
           </button>
         </span>
       </div>
