--- a/src/app/features/rfq/ref-detail/ref-detail.component.html
+++ b/src/app/features/rfq/ref-detail/ref-detail.component.html
@@ -75,7 +75,7 @@
         <mat-expansion-panel class="myPanel" [expanded]="true">
           <mat-expansion-panel-header>
             <mat-panel-title>
-              Submitted RFQ
+              Quotes Received
             </mat-panel-title>
           </mat-expansion-panel-header>
 
@@ -172,7 +172,7 @@
         <mat-expansion-panel class="myPanel" [expanded]="true">
           <mat-expansion-panel-header>
             <mat-panel-title>
-              Non Submitted RFQ
+              Quotes Not Received
             </mat-panel-title>
           </mat-expansion-panel-header>
 
