--- a/src/app/features/rfq-supplier-template/rfq-supplier-detail/rfq-supplier-detail.component.html
+++ b/src/app/features/rfq-supplier-template/rfq-supplier-detail/rfq-supplier-detail.component.html
@@ -1,5 +1,5 @@
 <!-- <fix-header></fix-header> -->
-<div *ngIf="rfqSupplierDetailList">
+<div *ngIf="rfqSupplierDetailList" class="rfq-after-bid">
   <div class="p-l-20 p-r-20 p-b-20 min-height parent">
     <div class="row width-100">
       <div class="col-md-12">
@@ -42,11 +42,28 @@
 
             <!-- Project Name Header -->
             <tr class="blue-background-color color-white">
-              <th class="font-size18">{{projects.projectName}}
+              <th class="font-size18 limited-character" >
+                <span>
+                    {{projects.projectName}}
+                </span>
               </th>
 
               <th class="font-size14" colspan="2">
-                {{projects.addressLine1}},{{projects.city}},{{projects.state}}
+               <span *ngIf="projects.addressLine1">
+                 {{projects.addressLine1}}
+               </span> 
+                <span *ngIf="projects.addressLine2">
+                 , {{projects.addressLine2}}
+                </span>
+               <span *ngIf="projects.city">
+                 , {{projects.city}}
+               </span> 
+                <span *ngIf="projects.state">
+                  , {{projects.state}}
+                </span>
+                <span *ngIf="projects.pincode">
+                  , {{projects.pincode}}
+                </span>
               </th>
 
               <th class="white-radiobutton">
@@ -61,7 +78,10 @@
             <!-- Material Info -->
             <ng-container *ngFor="let material of projects.materialList">
               <tr matSort class="material-rfq-supplies">
-                <td class="font-size14">{{material.materialName}}</td>
+                <td class="font-size14 limited-character">
+                  <span>
+                    {{material.materialName}}
+                  </span></td>
                 <td class="font-size14" colspan="2">Requested Quantity: {{material.materialQuantity}}
                   {{material.materialUnit}}
                 </td>
@@ -79,8 +99,8 @@
                 <tr matSort class="brand-name-rfq-supplies">
                   <td class="font-size14">Brand Name</td>
                   <td class="font-size14">Rate</td>
-                  <td class="font-size14">Total Amount (Rs)</td>
-                  <td class="font-size14">GST Amount (Rs)</td>
+                  <td class="font-size14 text-align-right">Total Amount (₹)</td>
+                  <td class="font-size14 text-align-right">GST Amount (₹)</td>
                 </tr>
 
                 <!-- Brand-wise details -->
@@ -96,12 +116,12 @@
                     </mat-form-field>
                   </td>
                   
-                  <td class="text-align-right">{{brand.brandRate * material.materialQuantity}}</td>
+                  <td class="text-align-right">{{(brand.brandRate * material.materialQuantity | number:'1.2-2')}}</td>
                   
                   <td class="text-align-right">
                     <span *ngIf="!brand.brandRate">0</span>
                     <span
-                      *ngIf="brand.brandRate">{{((material.materialIgst/100)*(brand.brandRate * material.materialQuantity)) | number}}</span>
+                      *ngIf="brand.brandRate">{{((material.materialIgst/100)*(brand.brandRate * material.materialQuantity)) | number:'1.2-2'}}</span>
                   </td>
                 </tr>
               </ng-container>
