--- a/src/app/shared/components/project-item/project-item.component.html
+++ b/src/app/shared/components/project-item/project-item.component.html
@@ -1,5 +1,5 @@
-<a href="javascript:void(0)" class="box-shadow">
-  <mat-card class="m-t-5 m-b-10">
+
+  <mat-card class="m-t-5 m-b-10 box-shadow">
     <mat-card-content class="mat-card-content">
       <div class="row">
         <div class="col-md-2 col-xs-12" style="height: 150px;">
@@ -10,9 +10,9 @@
           <div class="row">
             <div class="col-xs-10">
               <div class="text-bold">
-                <a class="main-color card-project-name" href="javascript:void(0)">{{
+                <span class="main-color card-project-name" href="javascript:void(0)">{{
                   projectDetails.projectName
-                }}</a>
+                }}</span>
               </div>
               <div class="row">
                 <div class=" col-xs-10 display-flex">
@@ -77,7 +77,7 @@
                   </div>
                   <div class="font-size12 p-l-15">Low Stock Material</div>
                 </div> -->
-                <div class="col-sm-4 box-custom color-text-card p-t-10  display-flex"
+                <div class="col-sm-4 box-custom color-text-card p-t-10 cursor-pointer display-flex"
                   (click)="navigationToBOM(projectDetails.projectId, projectDetails)" matTooltip="View All Materials">
                   <div class="font-size20 text-bold">
                     <span *ngIf="projectDetails.matCount">
@@ -91,7 +91,7 @@
                     All Materials
                   </div>
                 </div>
-                <div class="col-sm-4 box-custom color-text-card p-t-10  display-flex"
+                <div class="col-sm-4 box-custom color-text-card p-t-10 cursor-pointer  display-flex"
                   (click)="redirectToOpenIndentCount(projectDetails.projectId, projectDetails)"
                   matTooltip="View All Indents">
                   <div class="font-size20 text-bold">
@@ -108,7 +108,7 @@
                   </div>
                 </div>
                 <span class="col-sm-4">
-                  <div *ngIf="permissionObj.purchaseOrderFlag" class="box-custom display-flex p-t-10 "
+                  <div *ngIf="permissionObj.purchaseOrderFlag" class="box-custom cursor-pointer display-flex p-t-10 "
                     (click)="redirectToPurchaseOrder()" matTooltip="View All Purchase Orders">
                     <div class="font-size20 color-text-card text-bold">
                       <span *ngIf="projectDetails.purchaseOrderCount">
@@ -151,4 +151,3 @@
       </div>
     </mat-card-content>
   </mat-card>
-</a>
