--- a/src/app/shared/dialogs/add-edit-user/add-edit-user-component.html
+++ b/src/app/shared/dialogs/add-edit-user/add-edit-user-component.html
@@ -90,7 +90,7 @@
               <mat-label>Role *</mat-label>
                 <mat-select formControlName="roleId">
                   <mat-option *ngFor="let role of allRoles" [value]="role.roleId">
-                    {{role.roleName}}
+                    {{role.roleDescription}}
                   </mat-option>
                 </mat-select>
             </mat-form-field>
