--- a/src/app/features/supplier/supplier-details/supplier-details.component.html
+++ b/src/app/features/supplier/supplier-details/supplier-details.component.html
@@ -39,10 +39,26 @@
         </mat-form-field>
       </div>
       <div class="col-xs-9">
+         
+
         <div class="text-right add-user-details-button-right p-t-10 p-r-20">
-          <button mat-raised-button (click)="addSupplier()" class="main-background-color main-button color-white">
-            Add Supplier
-          </button>
+          <div class="text-right d-flex justify-content-end" appDnd>
+            <div class="mr-3 p-t-10">
+              <span>
+                <img src="assets/images/download.png" alt="download" class="img-fluid mr-2">
+                <a (click)="downloadExcel('assets/images/Supplier_Upload_Template.xlsx')"> Download Supplier Template</a></span>
+            </div>
+            <div  class="mr-3 p-t-10">
+              <input type="file" accept=".xlsx" #fileDropRef id="fileDropRef" class="fileupload" multiple
+                (change)="uploadExcel($event.target.files)" />
+              <span> <img src="assets/images/upload.png" alt="upload" class="img-fluid mr-2 w-30"> Upload Supplier Template</span>
+            </div>
+              <button mat-raised-button (click)="addSupplier()" class="main-background-color main-button color-white">
+                Add Supplier
+              </button>
+          </div>
+
+         
         </div>
       </div>
     </div>
