Issue-to-indent validations, user screen refinements Signed-off-by: subham.saha@buildsupply.com <subham.saha@buildsupply.com>

--- a/src/app/features/users/user-details/user-details.component.html
+++ b/src/app/features/users/user-details/user-details.component.html
@@ -66,7 +66,7 @@
       <div class="row">
         <!-- <div class="col-sm-12"> -->
         <!-- table structure -->
-        <div class="user-details-table-div-active-inactive">
+        <div  [ngClass]="{'user-details-table-div-active-inactive': addUserBtn===true,'user-details-table-div-active-inactive-single':addUserBtn===false }">
         <table mat-table [dataSource]="dataSourceActivate" class="mat-elevation-z8 col-sm-12">
           <!--- Note that these columns can be defined in any order.
                   The actual rendered columns are set as a property on the row definition" -->
@@ -154,7 +154,7 @@
       <div class="row">
         <!-- <div class="col-sm-12"> -->
         <!-- table structure -->
-        <div class="user-details-table-div-active-inactive">
+        <div [ngClass]="{'user-details-table-div-active-inactive':addUserBtn===true,'user-details-table-div-active-inactive-single':addUserBtn===false}">
         <table mat-table [dataSource]="dataSourceDeactivate" class="mat-elevation-z8 col-sm-12">
           <!--- Note that these columns can be defined in any order.
                   The actual rendered columns are set as a property on the row definition" -->
