--- a/src/assets/scss/pages/users.scss
+++ b/src/assets/scss/pages/users.scss
@@ -66,6 +66,16 @@
              border-left: 1px solid #d6d6d6;
         }
 }
+.user-details-table-div-active-inactive-single{
+        overflow-y: scroll;
+        max-height: 407px;
+        overflow-x: hidden;
+        width: 99.5%;;
+
+        table{
+             border-left: 1px solid #d6d6d6;
+        }
+}
 
 .btn-project-user-details{
     background:	#F0F0F0;
